Try to replace com.sun.beans.finder.ClassFinder